Hero block spacing fix for category pages.

--- a/styleguide/source/assets/scss/03-organisms/_category-index.scss
+++ b/styleguide/source/assets/scss/03-organisms/_category-index.scss
@@ -68,4 +68,12 @@
   form.views-exposed-form .form-item.form-topic-search {
     margin-top: 0;
   }
+
+  @include breakpoint($bp-small) {
+    .ama__layout--two-col-right--75-25__top {
+      .ama__category-hero-block {
+        margin-right: 14px;
+      }
+    }
+  }
 }
